k8s/base/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-yonis-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: eks.k8-yonis.dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eks.k8-yonis.dev
      secretName: eks-yonis-app-tls
  rules:
    - host: eks.k8-yonis.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-yonis-app
                port:
                  number: 80
